<resources>
    <string name="app_name">aelf Wallet</string>
    <string name="lang_simplified_chinese_show">简体中文</string>
    <string name="lang_traditional_chinese_show">繁体中文</string>
    <string name="lang_english_show">English</string>
    <string name="start_backup">Start Backup</string>
    <string name="createimport_create_wallet">Create Wallet</string>
    <string name="createimport_import_wallet">Import Wallet</string>
    <string name="createimport_import_wallet_advanced">Import Wallet(Advanced)</string>
    <string name="copy_address">Copy Address</string>
    <string name="createimport_how_to_use">How to use AELF Wallet?</string>
    <string name="my_account">Identity Management</string>
    <string name="identity_management">Identity Management</string>
    <string name="address_book">Address Book</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="help">Help &#38; Feedback</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="about_us">About Us</string>
    <string name="balance">Balance</string>
    <string name="tab_market">Market</string>
    <string name="tab_propety">Assets</string>
    <string name="tab_discovery">Discover</string>
    <string name="tab_profile">My</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_hint_username">enter your  wallet name</string>
    <string name="hint_password">Please set a password with 12&#8211;36 characters.</string>
    <string name="hint_password_confirm">Please confirm your password</string>
    <string name="hint_password_hints">Password hints (Optional)</string>
    <string name="import_wallet_hint_seperate_each_mnemonic">Input mnemonic</string>
    <string name="import_wallet_tip_1">You can use mnemonic phrase to import wallet or scan QR code to import.\n\nYou reset wallet password while importing the Mnemonic Phrase</string>
    <string name="import_agree_tip">I have read and agree to </string>
    <string name="mnemonics">Mnemonics</string>
    <string name="import_keystore_tip">Keystore is file format for private keys[JSON].\n\n
        Copy and paste the Keystore content to input field,
        or scan the QR Code generated with Keystore’s information to import. </string>
    <string name="import_scan_keystore_tip">Keystore is file format for private keys[JSON].
        Click to scan Keystore QR code to import wallet</string>
    <string name="import_wallet_hint_seperate_each_keystore">Input keystore</string>
    <string name="input_keystore_password">input keystore’s password</string>
    <string name="incorrect_keystore_format">Incorrect Keystore format</string>
    <string name="correct_keystore">Please enter the correct Keystore</string>
    <string name="importing_aelf_wallet">Importing AELF Wallet</string>
    <string name="create_aelf_wallet">creating AELF Wallet</string>
    <string name="notification_tip">Mnemonic words can be used to recover your assets when you forget password, delete the app
    or lose your phone.

    \n\nWe highly recommend you write the Mnemonic words (Backup Phrase) on paper and keep it in a safe place, anyone get can access or spend
    your assets. Please don’t save them on any cloud drive or share via the internet.</string>
    <string name="notification_start_backup">Start Backup</string>
    <string name="mnemonic_tip">Mnemonic words can be used to import wallet or reset wallet password. If someone gets your
mnemonic words, he gets all your assets directly! Please write in the Mnemonic words on paper and keep it in a safe place.\n\n

Please write down the 12 Mnemonic words in order carefully, we will verify this in the next step.</string>
    <string name="for_tutorial_purpose">For tutorial purpose, you can only see ELF assets in A Chain</string>
    <string name="wallet_tutorial">Wallet Tutorial</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="mnemonic_screenshot">Don’t Screenshot</string>
    <string name="mnemonic_title">Mnemonic Phrase Backup</string>
    <string name="mnemonic_confirm_title">Confirm Mnemonic Phrase</string>
    <string name="mnemonic_confirm_tip">Please choose Mnemonic Phrase in correct
    order to confirm your mnemonic phrase backup in the previous step is correct.</string>
    <string name="dialog_screenshot_tip">We highly recommend you write the
    Mnemonic words (Backup Phrase) on paper and keep it in a safe place, anyone get it can access or spend your assets.</string>
    <string name="create_remember_your_password">Please remember your password</string>
    <string name="please_back_up">Please back up your wallet!</string>
    <string name="create_remember_info">Password is used to encrypt and protect your
    private keys and transactions so the strength of the password is very important. AELF Wallet will not save your wallet password and get it back. So please
    remember your password.</string>
    <string name="backup_tip">Mnemonic words can be used to recover your assets when you forget password, delete the app
or lose your phone.\n\nWe highly recommend you write the Mnemonic words (Backup Phrase) on paper and keep it in a safe place, anyone get can access or spend
your assets. Please don’t save them on any cloud drive or share via the internet.</string>
    <string name="password_hint">Password Hint</string>
    <string name="export_mnemonic_phrase">Export Mnemonic Phrase</string>
    <string name="export_keystore">Export Keystore</string>
    <string name="export_private_key">Export Private Key</string>
    <string name="logout">Logout</string>
    <string name="private_mode">Private Mode</string>
    <string name="private_mode_detail">When turn on private mode, the assets and amount in wallet will be hidden.</string>
    <string name="password_free_payment">Password - free Payment</string>
    <string name="auto_receipt">Auto Receipt</string>
    <string name="language">Language</string>
    <string name="pricing_currency">Pricing Currency</string>
    <string name="currency">Currency</string>
    <string name="price">Price</string>
    <string name="change">Change</string>
    <string name="trend_7d">Trend (7d)</string>
    <string name="drag">Drag</string>
    <string name="top">top</string>
    <string name="asset_display">Asset Display</string>
    <string name="by_chain">By Chain</string>
    <string name="discover">Discover</string>
    <string name="search_or_input_dapp_address">Enter chain ID to search or add</string>
    <string name="search_dapp_name">Enter DApp name</string>
    <string name="exchange">Tools</string>
    <string name="recommended">Recommended</string>
    <string name="dapp_apply">DApp listing application</string>
    <string name="more">More</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="scan">Scan</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="later">Later</string>
    <string name="welcome_tip">We prepared an easy tutorial for you to
    learn quicker.</string>
    <string name="strong">Strong</string>
    <string name="week">Week</string>
    <string name="middle">Middle</string>
    <string name="popular_assets">Assets(Chain Name - Token Name)</string>
    <string name="hint_enter_token_name">Enter Token Name</string>
    <string name="welcome_to">Welcome to AELF Wallet!</string>
    <string name="welcome_learn_tutorial">Learn Tutorial</string>
    <string name="welcome_skip_tutorial">Skip Tutorial</string>
    <string name="total_assets_new">Total Assets in Current Account</string>
    <string name="assets_view">Assets View</string>
    <string name="clear">Clear</string>
    <string name="system_message">System Messages</string>
    <string name="trasncation_notice">Transaction Notice</string>
    <string name="assets_notice">Assets from Chain 1 has arrived, please confirm.</string>
    <string name="confirm">Confirm</string>
    <string name="transaction_record">Transaction Record</string>
    <string name="receive">Receive</string>
    <string name="transfer">Transfer</string>
    <string name="copy_address_notice">Notice: This address only support receiving from ELF. Please don’t use other coins!</string>
    <string name="loading_cancel">Cancel</string>
    <string name="loading">Loading ...</string>
    <string name="all">All</string>
    <string name="wallet_name_null">Wallet name is null</string>
    <string name="please_enter_wallet_name">Please enter a wallet name</string>
    <string name="mnemonic_name_null">Mnemonic name is null</string>
    <string name="mnemonic_not_correct">Mnemonic not correct</string>
    <string name="e_password">Please input password</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="aelf_wallet">AELF Wallet</string>
    <string name="customised">Customised</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="receiver_chain_id">Receiver Chain ID</string>
    <string name="receiver_address">Receiver Address - Wallet Address</string>
    <string name="notes_optional">Notes (Optional)</string>
    <string name="no_notifications">No Notifications</string>
    <string name="select_language">Select Language</string>
    <string name="please_search_by_keyword">Please search by keyword</string>
    <string name="delete">Delete</string>
    <string name="please_enter_contact_name">Please enter address name</string>
    <string name="remark_optional">Remark (optional)</string>
    <string name="enter_valid_address">Enter a valid address</string>
    <string name="new_contact">New Address</string>
    <string name="edit_contact">Edit Address</string>
    <string name="mnemonic_phrase">Mnemonic Phrase</string>
    <string name="having_your_mnemonic">Having your mnemonic phrase means having all your wallet assets.</string>
    <string name="mnemonic_phrase_backup">Mnemonic Phrase Backup</string>
    <string name="phrase_backup_notes">Please write down the mnemonic words in order on paper carefully. If your phone is lost, stolen or damaged, mnemonic words can be used to recover your assets.</string>
    <string name="off_line_saving">Off-line Saving</string>
    <string name="off_line_saving_notes">Keep the mnemonic words in a secure place off-line. Please do not share or save the mnemonic words in a public network, such as email, photo albums, social apps and such.</string>
    <string name="backup_notes">Backup Notes</string>
    <string name="keystore">Keystore</string>
    <string name="keystore_backup">Keystore Backup</string>
    <string name="sort_by">Sort By</string>
    <string name="camera">Camera</string>
    <string name="photo_album">Photo Album</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="by_value_s_l">By value (smallest to largest)</string>
    <string name="by_value_l_s">By value (largest to smallest)</string>
    <string name="by_name_z_a">By name (Z to A)</string>
    <string name="by_name_a_z">By name (A to Z)</string>
    <string name="version_update">Version Update</string>
    <string name="join_the_community">Join the community</string>
    <string name="telegram">Telegram</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="please_back_up_your_wallet">Please back up your wallet!</string>
    <string name="version_log">Version Log</string>
    <string name="pwd_rules">Please enter the 12&#8211;36 character password, containing upper and lower case letters, characters and numbers.</string>
    <string name="pwd_len_least_12">12-36 characters password</string>
    <string name="wechat_id">Wechat ID</string>
</resources>