<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:src="@mipmap/logo_mark" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/blue_09162d"
            android:textSize="14sp" />

        <include
            layout="@layout/line_e0e0e0"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="55dp" />

        <TextView
            android:id="@+id/tv_version_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:text="@string/version_log"
            android:textColor="@color/blue_101829"
            android:textSize="15sp" />

        <include
            layout="@layout/line_e0e0e0"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/tv_version_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:text="@string/version_update"
            android:textColor="@color/blue_101829"
            android:textSize="15sp" />

        <include
            layout="@layout/line_e0e0e0"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:text="@string/join_the_community"
            android:textColor="@color/blue_09162d"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/wechat_id"
            android:textColor="@color/blue_641eb0"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_telegram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/telegram"
            android:textColor="@color/blue_641eb0"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/twitter"
            android:textColor="@color/blue_641eb0"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/facebook"
            android:textColor="@color/blue_641eb0"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>