<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="90dp"
        android:src="@mipmap/warning" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/please_back_up_your_wallet"
        android:textColor="@color/blue_09162d"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="27dp"
        android:gravity="center_horizontal"
        android:text="@string/notification_tip"
        android:textColor="@color/gray_787F87"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/gradient_r45_661fb8"
        android:gravity="center"
        android:text="@string/notification_start_backup"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />

</LinearLayout>